--- a/web/main.css
+++ b/web/main.css
@@ -102,8 +102,19 @@ input[type=submit]:hover {
     background-color: #45a049;
 }
 
+input[type=submit]:disabled {
+    background-color: grey;
+    color: white;
+}
+
+
 .formContainer {
     border-radius: 5px;
     background-color: #f2f2f2;
     padding: 20px;
+}
+
+.helperText {
+    font-size: 12px;
+    
 }
