--- a/web/main.css
+++ b/web/main.css
@@ -23,7 +23,7 @@ input, select {
 
 #messageBox {
     text-align: center;
-    border-radius: 5px;
+    border-radius: 30px;
     background-color: white;
     padding: 1px;
     font-weight: bold;
@@ -32,7 +32,7 @@ input, select {
     top: -300px;
     left: 50%;
     transform: translateX(-50%);
-    animation: messageDropdown 4.0s ease-in-out;
+    animation: messageDropdown 4.0s ease-out;
     -webkit-box-shadow: 4px 4px 11px 2px #ccc; 
     -moz-box-shadow:    4px 4px 11px 2px #ccc; 
     box-shadow:         4px 4px 11px 2px #ccc;  
@@ -40,7 +40,7 @@ input, select {
 }
 
 .success {
-    color: green;
+    color: #4CAF50;
 }
 
 .error {
@@ -117,4 +117,8 @@ input[type=submit]:disabled {
 .helperText {
     font-size: 12px;
     
+}
+
+.uppercaseFirstLetter {
+    text-transform: capitalize;
 }
